Izmjene zbog produkcije na GitHub Pages - slika i ton

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="me">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wedding Invitation</title>
+
+    <!-- Basic Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pozivnica za vjenčanje</title>
+    <meta name="description" content="Pozivnica za vjenčanje">
+
+    <!-- Open Graph (for Viber, Facebook, etc.) -->
+    <meta property="og:title" content="Pozivnica za vjenčanje">
+    <meta property="og:description" content="Pozivnica za vjenčanje">
+    <meta property="og:image" content="https://sradenovic.github.io/digitalna-pozivnica/images/preview.png">
+    <meta property="og:url" content="https://sradenovic.github.io/digitalna-pozivnica/">
+    <meta property="og:type" content="website">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
