--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@200;300;400&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@200;300;400&family=Great+Vibes&display=swap&family=Ephesis&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Montserrat', sans-serif;
@@ -29,6 +29,23 @@
       }
       .font-cursive {
         font-family: 'Great Vibes', cursive;
+      }
+      .font-jelena {
+        font-family: 'Ephesis', cursive;
+      }
+      @keyframes slide-in-right {
+        from { transform: translateX(80px); opacity: 0; }
+        to { transform: translateX(0); opacity: 1; }
+      }
+      .animate-slide-right {
+        animation: slide-in-right 1.2s ease-out forwards;
+      }
+      @keyframes slide-in-left {
+        from { transform: translateX(-80px); opacity: 0; }
+        to { transform: translateX(0); opacity: 1; }
+      }
+      .animate-slide-left {
+        animation: slide-in-left 1.2s ease-out forwards;
       }
     </style>
   <script type="importmap">
